--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -1,78 +1,117 @@
-- title: Getting started
+- title: 'Texas: A Quick Tour'
   pages:
-    - path: /getting-started
-- title: Demo
+    - path: /quick-tour
+- title: Travel Information
   pages:
-    - path: /demo
-- title: Gallery
+    - path: /travel-information
+- title: Road Trips
   pages:
-    - path: /gallery
-- title: Contributions
+    - title: Black History
+      path: /road-trips/black-history
+    - title: Boogie Woogie Highway
+      path: /road-trips/boogie-woogie-highway
+    - title: Cattle Drives
+      path: /road-trips/cattle-drives
+    - title: Mural Trail
+      path: /road-trips/mural-trail
+    - title: Ghost Towns
+      path: /road-trips/ghost-towns
+    - title: Railroad Hotels
+      path: /road-trips/railroad-hotels
+    - title: Outdoor Adventure
+      path: /road-trips/outdoor-adventure
+    - title: Wildflower Drives
+      path: /road-trips/wildflower-drives
+    - title: Roadside Eats
+      path: /road-trips/roadside-eats
+    - title: Swimming Holes
+      path: /road-trips/swimming-holes
+- title: Travel Regions
   pages:
-    - path: /contributions
-- title: Guides
+    - title: South Texas Plains
+      path: /regions/south-texas-plains 
+    - title: Gulf Coast
+      path: /regions/gulf-coast
+    - title: Piney Woods
+      path: /regions/piney-woods
+    - title: Prairies and Lakes
+      path: /regions/prairies-and-lakes
+    - title: Hill Country 
+      path: /regions/hill-country
+    - title: Big Bend Country
+      path: /regions/big-bend-country
+    - title: Panhandle Plains
+      path: /regions/panhandle-plains
+- title: Reader Service
   pages:
-    - title: Configuration
-      path: /guides/configuration
-    - title: Authoring MDX
-      path: /guides/MDX
-    - title: Shadowing
-      path: /guides/shadowing
-    - title: Styling
-      path: /guides/styling
-    - title: Navigation
-      path: /guides/navigation/sidebar
-    - title: npm scripts
-      path: /guides/npm-scripts
-    - title: Hosting
-      path: /guides/hosting
-- title: Components
-  pages:
-    - title: Accordion
-      path: /components/Accordion
-    - title: AnchorLinks
-      path: /components/AnchorLinks
-    - title: ArtDirection
-      path: /components/ArtDirection
-    - title: ArticleCard
-      path: /components/ArticleCard
-    - title: Aside
-      path: /components/Aside
-    - title: Caption
-      path: /components/Caption
-    - title: Code blocks
-      path: /components/code-blocks
-    - title: DoDontExample
-      path: /components/DoDontExample
-    - title: DoDontRow
-      path: /components/DoDontRow
-    - title: FeatureCard
-      path: /components/FeatureCard
-    - title: FeedbackDialog
-      path: /components/FeedbackDialog
-    - title: GifPlayer
-      path: /components/GifPlayer
-    - title: Grid
-      path: /components/Grid
-    - title: ImageCard
-      path: /components/ImageCard
-    - title: ImageGallery
-      path: /components/ImageGallery
-    - title: InlineNotification
-      path: /components/InlineNotification
-    - title: Markdown
-      path: /components/markdown
-    - title: MediumPosts
-      path: /components/MediumPosts
-    - title: MiniCard
-      path: /components/MiniCard
-    - title: PageDescription
-      path: /components/PageDescription
-    - title: ResourceCard
-      path: /components/ResourceCard
-    - title: Tabs
-      path: /components/Tabs
-    - title: Title
-      path: /components/Title
-    - title: Video
-      path: /components/Video
+    - path: /guide-to-advertisers
+- title: Texas Beverage Tour
+  pages: 
+    - path: /wineries-of-texas
+
+# - title: Guides
+#   pages:
+#     - title: Configuration
+#       path: /guides/configuration
+#     - title: Authoring MDX
+#       path: /guides/MDX
+#     - title: Shadowing
+#       path: /guides/shadowing
+#     - title: Styling
+#       path: /guides/styling
+#     - title: Navigation
+#       path: /guides/navigation/sidebar
+#     - title: npm scripts
+#       path: /guides/npm-scripts
+#     - title: Hosting
+#       path: /guides/hosting
+# - title: Components
+#   pages:
+#     - title: Accordion
+#       path: /components/Accordion
+#     - title: AnchorLinks
+#       path: /components/AnchorLinks
+#     - title: ArtDirection
+#       path: /components/ArtDirection
+#     - title: ArticleCard
+#       path: /components/ArticleCard
+#     - title: Aside
+#       path: /components/Aside
+#     - title: Caption
+#       path: /components/Caption
+#     - title: Code blocks
+#       path: /components/code-blocks
+#     - title: DoDontExample
+#       path: /components/DoDontExample
+#     - title: DoDontRow
+#       path: /components/DoDontRow
+#     - title: FeatureCard
+#       path: /components/FeatureCard
+#     - title: FeedbackDialog
+#       path: /components/FeedbackDialog
+#     - title: GifPlayer
+#       path: /components/GifPlayer
+#     - title: Grid
+#       path: /components/Grid
+#     - title: ImageCard
+#       path: /components/ImageCard
+#     - title: ImageGallery
+#       path: /components/ImageGallery
+#     - title: InlineNotification
+#       path: /components/InlineNotification
+#     - title: Markdown
+#       path: /components/markdown
+#     - title: MediumPosts
+#       path: /components/MediumPosts
+#     - title: MiniCard
+#       path: /components/MiniCard
+#     - title: PageDescription
+#       path: /components/PageDescription
+#     - title: ResourceCard
+#       path: /components/ResourceCard
+#     - title: Tabs
+#       path: /components/Tabs
+#     - title: Title
+#       path: /components/Title
+#     - title: Video
+#       path: /components/Video
