--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
   },
   "dependencies": {
     "gatsby": "^2.24.14",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-sharp": "^2.14.0",
     "gatsby-theme-carbon": "^1.27.1",
+    "gatsby-transformer-sharp": "^2.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "gatsby-plugin-sharp-exif": "^1.0.4"
   }
 }
