Finished almost all of the road trips. Perfected ad widget. Small tweaks to favicon and homepage.

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -18,8 +18,8 @@
       path: /road-trips/ghost-towns
     - title: Railroad Hotels
       path: /road-trips/railroad-hotels
-    - title: Outdoor Adventure
-      path: /road-trips/outdoor-adventure
+    - title: To the Top of Texas
+      path: /road-trips/top-of-texas
     - title: Wildflower Drives
       path: /road-trips/wildflower-drives
     - title: Roadside Eats
