--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "gatsby": "^2.24.14",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-sharp": "^2.14.0",
