--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.14.0",
     "gatsby-theme-carbon": "^1.27.1",
     "gatsby-transformer-sharp": "^2.12.0",
+    "query-string": "^6.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
