Files from Friday -- two regions and some menu switches

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -42,7 +42,7 @@
       path: /regions/big-bend-country
     - title: Panhandle Plains
       path: /regions/panhandle-plains
-- title: Reader Service
+- title: Advertiser Index
   pages:
     - path: /guide-to-advertisers
 - title: Texas Beverage Tour
