--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-htaccess": "^1.4.0",
     "gatsby-plugin-sharp": "^2.14.0",
     "gatsby-theme-carbon": "^1.27.1",
     "gatsby-transformer-sharp": "^2.12.0",
